--- a/src/components/Expenses/style.scss
+++ b/src/components/Expenses/style.scss
@@ -7,11 +7,11 @@
 }
 
 header {
-  background-color: $majorColor;
+  background-color: white;
   width: 100%;
   text-align: center;
   padding: 1%;
-  color: white;
+  color: #333;
   font-size: 22px;
 }
 
@@ -22,46 +22,54 @@ header {
 
 .controls-container {
   display: flex;
-  background-color: #666666;
+  background-color: white;
   height: 568px;
   box-sizing: border-box;
-  /*flex-grow: 2;*/
   width: 42%;
-  padding: 5px;
+  flex-direction: column;
+  border-right: 1px solid #966b6b;
+}
+
+.add-expenses-icons {
+  background-color: #966b6b;
+  height: 56px;
+  width: 100%;
+}
+
+.form-container {
+  display: flex;
   justify-content: center;
   align-items: center;
+  padding: 10% 0px;
 }
 
 .display-area-container {
+  display: flex;
+
+  justify-content: center;
+  /*background-color: #e5e5e5;*/
+  background-color: #d0c7c7cf;
   height: 568px;
   flex-grow: 10;
 }
 
-form {
-  width: 80%;
+/**** ToolTip Design ****/
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
   text-align: center;
-  padding: 2px;
+  padding: 5px 0;
+  border-radius: 6px;
+
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
 }
 
-input[type="text"] {
-  width: 95%;
-  padding: 3.5% 10px;
-  border: 0px;
-  border-radius: 2px;
-  margin: 3% 0;
-  box-sizing: border-box;
-  font-size: 15px;
-  font-weight: 500;
-  font-family: $fontStack;
-}
-
-button {
-  font-family: $fontStack;
-  background-color: $majorColor;
-  border: none;
-  padding: 15px 50px;
-  color: white;
-  text-align: center;
-  font-size: 15px;
-  border-radius: 4px;
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
