--- a/src/components/_base.scss
+++ b/src/components/_base.scss
@@ -1,18 +1,54 @@
 $majorColor: #fa4251;
+$primary-text-color: #333;
 $fontStack: "Liu Jian Mao Cao", cursive;
 
 * {
   box-sizing: border-box;
+  color: $primary-text-color;
+  list-style-type: none;
 }
 
+form {
+  width: 80%;
+  text-align: center;
+  padding: 2px;
+}
+
+input[type="text"],
+select {
+  width: 95%;
+  padding: 3.5% 10px;
+  border: 1px solid #e6949470;
+  box-shadow: #e0e0d7 2px -3px 7px 0px;
+  border-radius: 2px;
+  margin: 3% 0;
+  box-sizing: border-box;
+  font-size: 15px;
+  font-weight: 500;
+  font-family: $fontStack;
+}
+
+button {
+  font-family: $fontStack;
+  background-color: #8c5458;
+  border: none;
+  box-shadow: #e0e0d7 2px -3px 7px 0px;
+  padding: 15px 50px;
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  border-radius: 4px;
+}
+
+/*** General Table Design ***/
+/****************************/
 table {
-  width: 100%;
-  color: #fff;
+  width: 95%;
   border-collapse: collapse;
 }
 
 th {
-  background-color: #666;
+  color: #666666;
   font-size: 12px;
   line-height: 1.4;
   text-transform: uppercase;
@@ -20,13 +56,31 @@ th {
 }
 
 td {
-  color: #333;
   text-align: center;
   padding: 7px;
+  color: #808080;
+  background-color: white;
+  /*border-bottom: 3px solid #e5e5e5;*/
+  border-bottom: 3px solid #d0c7c7cf;
 }
 
 tfoot {
   th {
-    padding: 4px;
+    padding: 4px 10px;
+  }
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0px;
+  height: 100%;
+
+  li {
+    padding: 0px 2px;
+    margin: 0px 18px;
+    cursor: pointer;
   }
 }
